--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
         <div id="topnav" class="row d-none d-lg-flex">
             <div class="col-12 col-md-2 col-lg-3 text-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link navbar-brand">
-                    <h2 class="logo-font text-black my-0">SkateStore<span class="dot">.</span> <img src="https://img.icons8.com/ios-filled/30/764c87/skateboard.png"/></h2>
+                    <h2 class="logo-font text-black my-0">SkateStore<span class="dot">.</span></h2>
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-6 my-auto text-center">
@@ -185,7 +185,8 @@
 
         <div class="row container-fluid footer-bottom mt-4 mx-0">
             <div class="col-12 col-md-4">Customer Service</div>
-            <div class="col-12 col-md-4">Company</div>
+            <div class="col-12 col-md-4">Company
+            </div>
             <div class="col-12 col-md-4">Contact Us</div>
         </div>
     </footer>
@@ -196,7 +197,6 @@
         $('.toast').toast('show');
 
         $(document).ready(function() {
-
             // Dropdown Hover Effect
             $('.dd-hover').hover(
                 function(){
