--- a/static/css/base.css
+++ b/static/css/base.css
@@ -250,6 +250,7 @@ a#shopnow {
 
 #shopnow {
     /* background-color: #222; */
+    position: relative;
     text-align: center;
     min-height: 15rem;
     padding-bottom: 12px;
@@ -260,29 +261,72 @@ a#shopnow {
 
 
 #shopnow-inner {
+    position: relative;
     background-color: #764c87;
     border-radius: 15px;
     width: 100%;
     height: 100%;
     margin: 0 auto;
     color:#fff;
+    opacity: 1;
 }
 
 #shopnow-inner h1 {
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 12;
     font-weight: 700;
+    color: white;
+}
+
+.middle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 85%;
+    width: 90%;
+    border-radius: 15px;
+    opacity: 0;
+    background-color: #764c87d5;
+}
+
+.middle h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 3rem;
+}
+
+.middle:hover {
+    transition: .5s ease-in-out;
+    opacity: 1;
+}
+
+@media (max-width: 429.98px) {
+    #shopnow {
+        min-height: 8rem;
+    }
 }
 
 
 
 /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
-    #shopnow {
-        min-height: 8rem;
+    /* #shopnow {
+        min-height: 15rem;
+    } */
+
+
+    #shopnow-inner img {
+        width: 2rem;
+        height: 2rem;
+    }
+
+    .middle h1 {
+        font-size: 2rem;
     }
 
     .header-container {
@@ -357,7 +401,7 @@ a#shopnow {
     #shopnow {
         min-height: 10rem;
     }
-    #shopnow h1 {
+    #shopnow-inner h1 {
         font-size: 1.8rem;
     }
 
@@ -400,10 +444,7 @@ a#shopnow {
 
 .shop-now-button:hover,
 .shop-now-button:active,
-.shop-now-button:focus,
-#shopnow-inner:hover,
-#shopnow-inner:active,
-#shopnow-inner:focus {
+.shop-now-button:focus{
     background: #492857;
     color: #fff;
     border: 3px solid #492857;
