added navbrand to medium screen, made shopnow icons responsive, chnaged the search dropdown style

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -110,7 +110,7 @@
         </h1>
     </div>
     <div class="middle text-white">
-        <h1 class="shopnow-header">Hardware<br>& Tools</h1>
+        <h1 class="shopnow-header">Misc</h1>
     </div>
 </a>
 </div>
@@ -123,9 +123,3 @@
     </p>
 </div>
 {% endblock %}
-
-{% block postloadjs %}
-    <script type="text/javascript">
-    
-    </script>
-    {% endblock %}
