--- a/static/css/base.css
+++ b/static/css/base.css
@@ -40,7 +40,6 @@ footer {
 
 #topnav {
     height: 6rem;
-    border-bottom: 1px solid #222;
 }
 
 a.nav-link {
@@ -74,7 +73,7 @@ a.nav-link {
 }
 
 #delivery-banner {
-    background-color: #764c87;
+    background-color: #222;
     color: #fff;
 }
 
@@ -85,6 +84,7 @@ a.nav-link {
 .border-0 {
     border: 0!important;
 }
+
 .dropdown-search {
     background-color: #fff!important;
     background-clip: padding-box;
@@ -92,6 +92,8 @@ a.nav-link {
     border-radius: 0.25rem;
     padding-left: 1rem;
     padding-right: 1rem;
+    padding-bottom: 1rem;
+    left: 0;
 }
 
 .dropdown-menu {
@@ -116,10 +118,15 @@ li.nav-item {
     line-height: 1rem;
 } 
 
+#mobile-nav h2 {
+    margin-left: 7rem;
+}
+
 /* ---------------------- CONTAINERS ---------------------- */
 
 .search-container {
     text-align: end;
+    text-transform: capitalize;
 } 
 
 .shopping-bag-continer,
@@ -174,6 +181,11 @@ a.nav-link:hover {
     #delivery-banner h4 {
         font-size: .8rem;
     }
+
+    #mobile-nav h2 {
+        margin: 0;
+    }
+    
 }
 
 /* Small devices (landscape phones, 576px and up) */
@@ -226,7 +238,7 @@ a.nav-link:hover {
 /* ---------------------- INDEX.HTML ---------------------- */
 
 .hero-container {
-    min-height: 90vh;
+    min-height: 70vh;
 }
 
 .hero-container h1 {
@@ -234,10 +246,6 @@ a.nav-link:hover {
     padding-top: 15rem;
 }
 
-.carousel {
-    position: relative;
-    padding-top: 8.3rem;
-}
 
 a#shopnow {
     text-decoration: none;
@@ -249,7 +257,6 @@ a#shopnow {
 }
 
 #shopnow {
-    /* background-color: #222; */
     position: relative;
     text-align: center;
     min-height: 15rem;
@@ -262,13 +269,13 @@ a#shopnow {
 
 #shopnow-inner {
     position: relative;
-    background-color: #764c87;
+    background-color: #222;
     border-radius: 15px;
     width: 100%;
     height: 100%;
     margin: 0 auto;
     color:#fff;
-    opacity: 1;
+    box-shadow: 8px 5px 18px -3px rgba(0,0,0,0.70);
 }
 
 #shopnow-inner h1 {
@@ -289,7 +296,7 @@ a#shopnow {
     width: 90%;
     border-radius: 15px;
     opacity: 0;
-    background-color: #764c87d5;
+    background-color: rgba(34, 34, 34, 0.85);
 }
 
 .middle h1 {
@@ -305,20 +312,17 @@ a#shopnow {
     opacity: 1;
 }
 
-@media (max-width: 429.98px) {
+@media (max-width: 426.98px) {
     #shopnow {
-        min-height: 8rem;
+        min-height: 9rem;
     }
 }
 
-
-
 /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
-    /* #shopnow {
-        min-height: 15rem;
-    } */
-
+    .middle {  
+        height: 80%;
+    }
 
     #shopnow-inner img {
         width: 3rem;
@@ -405,11 +409,29 @@ a#shopnow {
         font-size: 1.8rem;
     }
 
+    #shopnow-inner img {
+        width: 2rem;
+        height: 2rem;
+    }
+
+    .middle h1 {
+        font-size: 1.2rem;
+    }
+
 }
 
 @media (min-width: 1400px) {
     #shopnow {
         min-height: 15rem;
+    }
+
+    #shopnow-inner img {
+        width: 3.1rem;
+        height: 3.1rem;
+    }
+
+    .middle h1 {
+        font-size: 2.5rem;
     }
 }
 
