--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,4 +1,4 @@
-<ul class="mobile-top-header uppercase ">
+<ul class="mobile-top-header">
     <li class="list-inline-item">
       <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="text-center">
@@ -6,12 +6,13 @@
               <p class="my-0">Search</p>
           </div>
       </a>
-      <div class="dropdown-menu dropdown-search border-0 rounded-0 my-0" aria-labelledby="mobile-search">
+      <div class="container-fluid dropdown-menu dropdown-search border-0 rounded-0 my-0 mx-0" aria-labelledby="mobile-search">
+        <p class="text-center"><small>What are you looking for?</small></p>
           <form class="form" method="GET" action="{% url 'products' %}">
-              <div class="input-group">
-                  <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+              <div class="input-group w-100 mx-auto">
+                  <input class="form-control" type="text" name="q" placeholder="Search our site">
                   <div class="input-group-append">
-                      <button class="form-control form-control btn btn-black border border-black rounded-0" type="submit">
+                      <button class="form-control form-control btn btn-black rounded-0" type="submit">
                           <span class="icon">
                               <i class="fas fa-search"></i>
                           </span>
