--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -10,9 +10,9 @@
         <p class="text-center"><small>What are you looking for?</small></p>
           <form class="form" method="GET" action="{% url 'products' %}">
               <div class="input-group w-100 mx-auto">
-                  <input class="form-control" type="text" name="q" placeholder="Search our site">
+                  <input class="form-control" type="text" name="q" placeholder="Search Products...">
                   <div class="input-group-append">
-                      <button class="form-control form-control btn btn-black rounded-0" type="submit">
+                      <button class="form-control form-control btn btn-black" type="submit">
                           <span class="icon">
                               <i class="fas fa-search"></i>
                           </span>
