--- a/templates/base.html
+++ b/templates/base.html
@@ -89,14 +89,14 @@
                             aria-expanded="false">
                             SEARCH
                         </a>
-                        <div class="container-fluid dropdown-menu border-0 w-100 p-3 rounded-0 my-0 mx-0" aria-labelledby="mobile-search">
+                        <div class="container-fluid dropdown-menu dropdown-search border-0 w-100 p-3 my-0 mx-0" aria-labelledby="mobile-search">
                             <p class="text-center"><small>What are you looking for?</small></p>
                             <form method="GET" action="{% url 'products' %}">
-                                <div class="input-group w-50 mx-auto">
+                                <div class="input-group w-50 mx-auto rounded-4">
                                     <input class="form-control rounded-0" type="text" name="q"
-                                        placeholder="Search our site">
+                                        placeholder="Search Products...">
                                     <div class="input-group-append">
-                                        <button class="form-control btn btn-black border border-black rounded-0"
+                                        <button class="form-control btn btn-black"
                                             type="submit">
                                             <span class="icon">
                                                 <i class="fas fa-search"></i>
