--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -39,83 +39,113 @@
     </a>
   </div> -->
 
-    <div class="container hero-container">
-        <div class="row">
-            <div class="col-12 col-md-8 offset-md-2 my-auto mx-auto text-center">
-                <h1 class="display-4 logo-font text-black uppercase">
-                   update your equipment<span class="dot">.</span>
-                </h1>
-                <p>
-                    Get the latest skateboarding gear to your setup here!
-                </p>
-                <div class="my-5">
-                    <h4>
-                        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-4 text-uppercase py-3">Shop Now</a>
-                    </h4>
-                </div>
+<!-- HERO SECTION -->
+<div class="container hero-container">
+    <div class="row">
+        <div class="col-12 col-md-8 offset-md-2 my-auto mx-auto text-center">
+            <h1 class="display-4 logo-font text-black uppercase">
+                update your equipment<span class="dot">.</span>
+            </h1>
+            <p>
+                Get the latest skateboarding gear to your setup here!
+            </p>
+            <div class="my-5">
+                <h4>
+                    <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-4 text-uppercase py-3">Shop Now</a>
+                </h4>
             </div>
         </div>
     </div>
-
-
-<div class="row container-fluid shopnow-container bg-shopnow pt-3 pb-3">
-
-<a href="{% url 'products' %}?category=decks" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner">
-        <h1><img src="https://img.icons8.com/ios/100/ffffff/skateboard-without-wheels.png"/></h1>
-    </div>
-    <div class="middle text-white">
-        <h1 class="shopnow-header">Decks</h1>
-    </div>
-</a>
-<a href="{% url 'products' %}?category=trucks" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner">
-        <h1><img src="https://img.icons8.com/ios/100/ffffff/skateboard-truck.png"/></h1>
-    </div>
-    <div class="middle text-white">
-        <h1 class="shopnow-header">Trucks</h1>
-    </div>
-</a>
-<a href="{% url 'products' %}?category=wheels" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner">
-        <h1><img src="https://img.icons8.com/ios/80/ffffff/skateboard-wheel.png"/></h1>
-    </div>
-    <div class="middle text-white">
-        <h1 class="shopnow-header">Wheels</h1>
-    </div>
-</a>
-<a href="{% url 'products' %}?category=bearings" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner">
-        <h1><img src="https://img.icons8.com/dotty/80/ffffff/final-state.png"/></h1>
-    </div>
-    <div class="middle text-white">
-        <h1 class="shopnow-header">Bearings</h1>
-    </div>
-</a>
-<a href="{% url 'products' %}?category=griptape" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner">
-        <h1><img src="https://img.icons8.com/ios-filled/100/ffffff/skateboard-grip-tape.png"/></h1>
-    </div>
-    <div class="middle text-white">
-        <h1 class="shopnow-header">Griptape</h1>
-    </div>
-</a>
-<a href="{% url 'products' %}?category=misc" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
-    <div id="shopnow-inner">
-        <h1><img src="https://img.icons8.com/ios/40/ffffff/screwdriver.png"/>
-            <img src="https://img.icons8.com/windows/40/ffffff/Production-order.png" class="d-none d-sm-inline"/>
-            <br>
-            <img src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/40/ffffff/external-screw-industry-kiranshastry-lineal-kiranshastry.png" class="d-none d-sm-inline"/>
-            <img src="https://img.icons8.com/ios/40/ffffff/open-end-wrench.png" class="d-none d-sm-inline"/>
-        </h1>
-    </div>
-    <div class="middle text-white">
-        <h1 class="shopnow-header">Misc</h1>
-    </div>
-</a>
 </div>
 
-
+<!-- SHOPNOW SECTION -->
+<div class="row container-fluid shopnow-container bg-shopnow pt-3 pb-3">
+    <a href="{% url 'products' %}?category=decks" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
+        <div id="shopnow-inner">
+            <h1><img src="https://img.icons8.com/ios/100/ffffff/skateboard-without-wheels.png"/></h1>
+        </div>
+        <div class="middle text-white">
+            <h1 class="shopnow-header">Decks</h1>
+        </div>
+    </a>
+    <a href="{% url 'products' %}?category=trucks" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
+        <div id="shopnow-inner">
+            <h1><img src="https://img.icons8.com/ios/100/ffffff/skateboard-truck.png"/></h1>
+        </div>
+        <div class="middle text-white">
+            <h1 class="shopnow-header">Trucks</h1>
+        </div>
+    </a>
+    <a href="{% url 'products' %}?category=wheels" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
+        <div id="shopnow-inner">
+            <h1><img src="https://img.icons8.com/ios/80/ffffff/skateboard-wheel.png"/></h1>
+        </div>
+        <div class="middle text-white">
+            <h1 class="shopnow-header">Wheels</h1>
+        </div>
+    </a>
+    <a href="{% url 'products' %}?category=bearings" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
+        <div id="shopnow-inner">
+            <h1><img src="https://img.icons8.com/dotty/80/ffffff/final-state.png"/></h1>
+        </div>
+        <div class="middle text-white">
+            <h1 class="shopnow-header">Bearings</h1>
+        </div>
+    </a>
+    <a href="{% url 'products' %}?category=griptape" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
+        <div id="shopnow-inner">
+            <h1><img src="https://img.icons8.com/ios-filled/100/ffffff/skateboard-grip-tape.png"/></h1>
+        </div>
+        <div class="middle text-white">
+            <h1 class="shopnow-header">Griptape</h1>
+        </div>
+    </a>
+    <a href="{% url 'products' %}?category=misc" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
+        <div id="shopnow-inner">
+            <h1><img src="https://img.icons8.com/ios/40/ffffff/screwdriver.png"/>
+                <img src="https://img.icons8.com/windows/40/ffffff/Production-order.png" class="d-none d-sm-inline"/>
+                <br>
+                <img src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/40/ffffff/external-screw-industry-kiranshastry-lineal-kiranshastry.png" class="d-none d-sm-inline"/>
+                <img src="https://img.icons8.com/ios/40/ffffff/open-end-wrench.png" class="d-none d-sm-inline"/>
+            </h1>
+        </div>
+        <div class="middle text-white">
+            <h1 class="shopnow-header">Misc</h1>
+        </div>
+    </a>
+</div>
+<!-- CAROUSEL -->
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="/media/rail.jpg" alt="First slide">
+        <div class="carousel-caption">
+            <h5> Update Your Skateboarding Equipment<span class="dot">.</span></h5>
+            <p>...</p>
+          </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/media/board.jpg" alt="Second slide">
+        <div class="carousel-caption">
+            <h5>...</h5>
+            <p>...</p>
+          </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 
 <div class="container-fluid tutorial-container row">
     <p class="">
