--- a/static/css/base.css
+++ b/static/css/base.css
@@ -98,7 +98,8 @@ a.nav-link {
     padding-left: 1rem;
     padding-right: 1rem;
     padding-bottom: 1rem;
-    left: 0;
+    left: 0; 
+    box-shadow: 0px 7px 8px -6px rgba(0,0,0,0.79);
 }
 
 .dropdown-search .form-control {
