--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -4,12 +4,21 @@
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Set Password" %}</h1>
-
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
+{% block inner_content %}
+<div class="account-header container">
+    <div class="row">
+        <div class="col-12">
+            <h1 class="text-center">{% trans "Set Password" %}</h1>
+        </div>
+    </div>
+</div>
+<div class="row account-container">
+    <div class="col-10 offset-1 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+        <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <input class="account-button btn btn-md roundend-4" type="submit" name="action" value="{% trans 'Set Password' %}"/>
+        </form>
+    </div>
+</div>
 {% endblock %}
