--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -4,7 +4,7 @@
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
-{% block content %}
+{% block inner_content %}
 <div class="account-header container">
     <div class="row">
         <div class="col-12">
