--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -4,8 +4,18 @@
 
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Account Inactive" %}</h1>
+{% block inner_content %}
+<div class="account-header container">
+    <div class="row">
+        <div class="col-12">
+            <h1 class="text-center">{% trans "Account Inactive" %}</h1>
+        </div>
+    </div>
+</div>
 
-<p>{% trans "This account is inactive." %}</p>
+<div class="row account-container">
+    <div class="col-10 offset-1 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+        <p class="text-center">{% trans "This account is inactive." %}</p>
+    </div>
+</div>
 {% endblock %}
