--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -4,7 +4,7 @@
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
-{% block content %}
+{% block inner_content %}
 <div class="account-header container text-center">
 	<div class="row">
 		<div class="col-12">
