--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -4,12 +4,22 @@
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+{% block inner_content %}
+<div class="account-header container">
+    <div class="row">
+        <div class="col-12">
+            <h1 class="text-center">{% trans "Change Password" %}</h1>
+        </div>
+    </div>
+</div>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-    </form>
+<div class="row account-container">
+    <div class="col-10 offset-1 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+        <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button class="account-button btn btn-md roundend-4" type="submit" name="action">{% trans "Change Password" %}</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
