--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -3,21 +3,30 @@
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
-
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-    {% else %}
-        {% if form %}
-            <form method="POST" action="{{ action_url }}">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" name="action" value="{% trans 'change password' %}"/>
-            </form>
+{% block inner_content %}
+<div class="account-header container">
+    <div class="row">
+        <div class="col-12">
+            <h1 class="text-center">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+        </div>
+    </div>
+</div>
+<div class="row account-container">
+    <div class="col-10 offset-1 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+        {% if token_fail %}
+            {% url 'account_reset_password' as passwd_reset_url %}
+            <p class="text-center">{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
         {% else %}
-            <p>{% trans 'Your password is now changed.' %}</p>
+            {% if form %}
+                <form method="POST" action="{{ action_url }}">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <input class="account-button btn btn-md roundend-4" type="submit" name="action" value="{% trans 'change password' %}"/>
+                </form>
+            {% else %}
+                <p class="text-center">{% trans 'Your password is now changed.' %}</p>
+            {% endif %}
         {% endif %}
-    {% endif %}
+    </div>
+</div>
 {% endblock %}
