--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -3,7 +3,17 @@
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+{% block inner_content %}
+<div class="account-header container">
+    <div class="row">
+        <div class="col-12">
+            <h1 class="text-center">{% trans "Change Password" %}</h1>
+        </div>
+    </div>
+</div>
+<div class="row account-container">
+    <div class="col-10 offset-1 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+        <p class="text-center">{% trans 'Your password is now changed.' %}</p>
+    </div>
+</div>
 {% endblock %}
