--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -4,8 +4,18 @@
 
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Sign Up Closed" %}</h1>
+{% block inner_content %}
+<div class="account-header container">
+    <div class="row">
+        <div class="col-12">
+            <h1 class="text-center">{% trans "Sign Up Closed" %}</h1>
+        </div>
+    </div>
+</div>
+<div class="row account-container">
+    <div class="col-10 offset-1 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+        <p class="text-center">{% trans "We are sorry, but the sign up is currently closed." %}</p>
+    </div>
+</div>
 
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
 {% endblock %}
