--- a/templates/base.html
+++ b/templates/base.html
@@ -118,7 +118,7 @@
                             {% if request.user.is_superuser %}
                             <a href="" class="dropdown-item"><i class="far fa-clipboard"></i> Product Management</a>
                             {% endif %}
-                            <a href="" class="dropdown-item"><i class="fas fa-portrait"></i> Profile</a>
+                            <a href="{% url 'profile' %}" class="dropdown-item"><i class="fas fa-portrait"></i> Profile</a>
                             <a href="{% url 'account_logout' %}" class="dropdown-item"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
                             {% else %}
                             <a href="{% url 'account_signup' %}" class="dropdown-item"><i class="fas fa-edit"></i></i> Register</a>
