--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -15,13 +15,32 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container mt-5 pt-5">
+<div class="container account-container profile-container">
     <div class="row">
         <div class="col">
-            <hr>
-            <h2 class="logo-font mb-4">Profile</h2>
-            <hr>
+            <h1 class="logo-font">Profile</h1>
         </div>
     </div>
+    <div class="row">
+        <div class="col-12 col-lg-6">
+            <p class="text-muted">Default Delivery Information</p>
+            <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <button class="account-button btn btn-md roundend-4">Update Information</button>
+            </form>
+        </div>
+        <div class="col-12 col-lg-6">
+            <p class="text-muted">Order History</p>
+            {{ orders }}
+        </div>
+    </div>
+</div>
     {{ profile }}
+{% endblock %}
+
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
 {% endblock %}
