--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -22,7 +22,6 @@
 		{% csrf_token %}
 		{{ form|crispy }}
 		<fieldset class="blockLabels">
-
 		{% for emailaddress in user.emailaddress_set.all %}
 		<div class="ctrlHolder">
 			<label for="email_radio_{{forloop.counter}}" class="{% if emailaddress.primary %}primary_email{%endif%}">
@@ -41,9 +40,9 @@
 		{% endfor %}
 
 		<div class="buttonHolder">
-			<button class="secondaryAction" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
-			<button class="secondaryAction" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
-			<button class="primaryAction" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
+			<button class="secondaryAction account-secoundary-btn btn btn-md roundend-4" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
+			<button class="secondaryAction account-button btn btn-md roundend-4" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
+			<button class="primaryAction remove-button btn btn-md roundend-4" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
 		</div>
 
 		</fieldset>
@@ -53,32 +52,36 @@
 		<p class="text-center"><strong>{% trans 'Warning:'%}</strong> {% trans "You currently do not have any e-mail address set up. You should really add an e-mail address so you can receive notifications, reset your password, etc." %}</p>
 
 		{% endif %}
+	</div>
 
 
+
+
+	<div class="col-10 offset-1 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
 		<h2 class="text-center">{% trans "Add E-mail Address" %}</h2>
 
 		<form method="post" action="{% url 'account_email' %}" class="add_email">
 			{% csrf_token %}
 			{{ form.as_p }}
-			<button name="action_add" type="submit">{% trans "Add E-mail" %}</button>
+			<button class="account-secoundary-btn btn btn-md roundend-4" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
 		</form>
-	</div>
-<div
+	</div>	
+</div>
 {% endblock %}
 
 
 {% block extra_body %}
 <script type="text/javascript">
 (function() {
-var message = "{% trans 'Do you really want to remove the selected e-mail address?' %}";
-var actions = document.getElementsByName('action_remove');
-if (actions.length) {
-	actions[0].addEventListener("click", function(e) {
-	if (! confirm(message)) {
-		e.preventDefault();
+	var message = "{% trans 'Do you really want to remove the selected e-mail address?' %}";
+	var actions = document.getElementsByName('action_remove');
+	if (actions.length) {
+		actions[0].addEventListener("click", function(e) {
+		if (! confirm(message)) {
+			e.preventDefault();
+		}
+	  });
 	}
-	});
-}
 })();
 </script>
 {% endblock %}
