--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -16,6 +16,7 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container account-container profile-container">
+    <!-- DISPLAY USERS INFORMATION -->
     <div class="row">
         <div class="col">
             <h1 class="logo-font">Profile</h1>
@@ -31,14 +32,50 @@
             </form>
         </div>
         <div class="col-12 col-lg-6">
-            <p class="text-muted">Order History</p>
-            {{ orders }}
+        <!-- DISPLAYS USERS ORDER HISTORY -->
+        <p class="text-muted">Order History</p>
+            <div class="order-history table-responsive">
+                <table class="table table-sm table-borderless">
+                    <thead>
+                        <tr>
+                            <th>Order Number</th>
+                            <th>Date</th>
+                            <th>Items</th>
+                            <th>Order Total</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for order in orders %}
+                            <tr>
+                                <td>
+                                    <a href="{% url 'order_history' order.order_number %}"
+                                    title="{{ order.order_number }}">
+                                        {{ order.order_number|truncatechars:6 }}
+                                    </a>
+                                </td>
+                                <td>{{ order.date }}</td>
+                                <td>
+                                    <ul class="list-unstyled">
+                                        {% for item in order.lineitems.all %}
+                                            <li class="small">
+                                                {% if item.product.has_sizes %}
+                                                    Size {{ item.product.size|upper }}
+                                                {% endif %}{{ item.product.name }} x{{ item.quantity }}
+                                            </li>
+                                        {% endfor %}
+                                    </ul>
+                                </td>
+                                <td>${{ order.grand_total }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
     {{ profile }}
 {% endblock %}
-
 
 {% block postloadjs %}
     {{ block.super }}
