--- a/static/css/base.css
+++ b/static/css/base.css
@@ -246,11 +246,6 @@ a.nav-link:hover {
     }
 }
 
-/* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {
-
-}
-
 /* Medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) {
     #main-nav a.nav-link {
@@ -281,77 +276,6 @@ a.nav-link:hover {
         font-size: .9rem;
         padding-left: .9rem;
         padding-right: .9rem;
-    }
-}
-
-
-
-/* ---------------------- PRODUCTS.HTML ---------------------- */
-
-.product-container {
-    min-height: 80vh;
-}
-
-.product-header h1 {
-    font-size: 4rem;
-    font-weight: 700;
-}
-
-.img-fluid {
-    border: #222 solid 1px;
-}
-
-.img-container {
-    padding: 1rem;
-}
-
-.img-card {
-    border: #222 solid 1px;
-}
-
-.card-body p {
-    font-weight: 700;
-    text-transform: uppercase;
-}
-
-.card-footer {
-    background-color: #fff;
-}
-
-.card-footer p {
-    font-size: small;
-    font-weight: 700;
-}
-
-.card-footer a {
-    color: #222831;
-    text-decoration: none;
-}
-
-.current-category {
-    text-decoration: none;
-    color: #222831;
-    font-weight: 700;
-    font-size: 4rem;
-    text-transform: capitalize;
-}
-.current-category:hover,
-.small a:hover {
-    color: #764c87!important;
-    transition: 4ms ease-in-out;
-}
-
-.custom-select {
-    padding: .5rem;
-}
-
-.small a {
-    color: #222831;
-}
-
-@media (min-width: 992px) {
-    .product-header.col.text-center {
-        padding-top: 5rem;
     }
 }
 
@@ -450,66 +374,6 @@ a.nav-link:hover {
     transition: .4s ease-in-out;
 }
 
-/* ---------------------- PRODUCT_DETAILS.HTML ---------------------- */
-
-.product-details-container h1 {
-    font-size: 4rem;
-    font-weight: 700;
-}
-
-.product-details-container p:nth-child(2) {
-    font-size: 2rem;
-}
-
-.product-details-container a {
-    color: #222831;
-    text-decoration: none;
-}
-
-.increment-qty,
-.decrement-qty {
-    background: #fff;
-    color: #222;
-}
-
-.increment-qty:hover,
-.decrement-qty:hover {
-    background: #EEEEEE;
-    color: #222;
-}
-
-.accordion {
-    border-top: 1px solid #222;
-    border-bottom: 1px solid #222;
-    padding-top: .2rem;
-    padding-bottom: .2rem;
-}
-
-.accordion-button:focus {
-    z-index: 3;
-    border-color: #fff;
-    outline: 0;
-    box-shadow: 0 0 0 0.25rem rgba(27, 26, 26, 0);
-}
-
-.accordion-button:hover {
-    z-index: 2;
-}
-.accordion-button:not(.collapsed) {
-    color: #222;
-    background-color: #fff;
-    box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
-}
-
-
-.accordion-button:after {
-    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23222'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
-}
-
-input#id_qty_25 {
-    border: 0;
-}
-
 /* ---------------------- BAG.HTML ---------------------- */
 
 .update-link,
@@ -533,7 +397,7 @@ input#id_qty_2 {
     border: 0;
 }
 
-/* ------------------------------- bootstrap toasts */
+/* ---------------------- BOOTSRAP TOASTS ---------------------- */
 
 .message-container {
     position: fixed;
@@ -566,7 +430,6 @@ input#id_qty_2 {
     top: -10px;
     right: 36px;
 }
-
 
 /* Convenience classes - colors copied from Bootstrap */
 .arrow-primary {
@@ -605,4 +468,41 @@ input#id_qty_2 {
     height: 100px;
     overflow-x: hidden;
     overflow-y: auto;
+}
+
+
+/* ---------------------- BUTTONS ---------------------- */
+
+.shop-now-button {
+    background: #764c87;
+    color: #fff;
+    min-width: 180px;
+    font-weight: 700;
+    border: 3px solid #764c87;
+}
+
+.add-button {
+    color: #764c87;
+    min-width: 180px;
+    font-weight: 700;
+    border: 3px solid #764c87;
+}
+
+/* ---------------------- HOVER ---------------------- */
+
+.add-button:hover,
+.add-button:active,
+.add-button:focus {
+    background: #764c87;
+    color: #fff;
+    transition: .4s ease-in-out;
+}
+
+.shop-now-button:hover,
+.shop-now-button:active,
+.shop-now-button:focus{
+    background: #492857;
+    color: #fff;
+    border: 3px solid #492857;
+    transition: .4s ease-in-out;
 }
