--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -16,7 +16,7 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="details-container container-fluid mt-5 pt-5">
+<div class="details-container container-fluid">
     <div class="row">
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
             <!-- Product Image -->
@@ -82,21 +82,24 @@
                             {% endif %}
                         <div class="col-12">
                             <p class="mt-3"><strong>Quantity:</strong></p>
-                            <div class="form-group w-50">
+                            <div class="form-group w-100">
                                 <div class="input-group">
+                                    
+                            <!-- Add to bag button -->
+                            <input type="submit" class="add-button btn btn-sm rounded-0 rounded-left text-uppercase py-2" value="Add to Bag">
                                     <div class="input-group-prepend">
-                                        <button class="decrement-qty btn rounded-4" 
+                                        <button class="decrement-qty btn  rounded-0" 
                                             data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-minus"></i>
                                             </span>
                                         </button>
                                     </div>
-                                        <input class="form-control qty_input" type="number" 
+                                        <input class="form-control qty_input text-center" type="number" 
                                             name="quantity" value="1" min="1" max="99" 
                                             data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                     <div class="input-group-append">
-                                        <button class="increment-qty btn rounded-4"
+                                        <button class="increment-qty btn rounded-0"
                                             data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-plus"></i>
@@ -106,16 +109,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col{% if s %}-12 mt-2{% endif %}">
+                        <div class="col-12">
                             <!-- Keep shoping button -->
-                            <a href="{% url 'products' %}" class="shop-now-button btn btn-sm rounded-4 text-uppercase py-3 mt-5 text-white">
+                            <a href="{% url 'products' %}" class="keep-shoping-button rounded-0 btn btn-sm py-2 mt-3">
                                 <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
                                 <span class="text-uppercase">Keep Shopping</span>
                             </a>
-                            <!-- Add to bag button -->
-                            <input type="submit" class="add-button btn btn-sm rounded-4 text-uppercase py-3 mt-5" value="Add to Bag">
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         {% endwith %}
