Worked on layout, removed accordion, added details and shipping sections

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -204,6 +204,9 @@ select option[value=""] {
     color: #6c757d!important;
 }
 
+.text-lilac {
+    color: #764c87;
+}
 
 /* ---------------------- HOVER ---------------------- */
 
