--- a/products/static/products/css/product_details.css
+++ b/products/static/products/css/product_details.css
@@ -7,10 +7,13 @@
     font-weight: 700;
 }
 
-.product-details-container p:nth-child(2) {
+.price {
     font-size: 2rem;
 }
 
+a {
+    text-decoration: none;
+}
 .qty_input {
     padding-left: 0;
     padding-right: 0;
@@ -73,40 +76,6 @@
     background: #764c87;
     color: #fff;
     transition: .4s ease-in-out;
-}
-
-.accordion {
-    border-top: 1px solid #222;
-    border-bottom: 1px solid #222;
-    padding-top: .2rem;
-    padding-bottom: .2rem;
-}
-
-.accordion a {
-    color: #222831;
-    text-decoration: none;
-    font-weight: 700;
-}
-
-.accordion-button:focus {
-    z-index: 3;
-    border-color: #fff;
-    outline: 0;
-    box-shadow: 0 0 0 0.25rem rgba(27, 26, 26, 0);
-}
-
-.accordion-button:hover {
-    z-index: 2;
-}
-.accordion-button:not(.collapsed) {
-    color: #222;
-    background-color: #fff;
-    box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
-}
-
-
-.accordion-button:after {
-    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23222'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
 }
 
 input#id_qty_25 {
