--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -36,33 +36,13 @@
             <div class="product-details-container mb-5 mt-md-5">
                 <!-- Producat name/price -->
                 <h1 class="mb-0">{{ product.name }}</h1>
-                <p class="mb-0 text-left">${{ product.price }}</p>
-                <!-- Accordian for product information -->
-                <div class="accordion accordion-flush mt-2" id="accordionFlushExample">
-                    <div class="accordion-item">
-                        <h1 class="accordion-header" id="flush-headingOne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                            Details
-                            </button>
-                        </h1>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">
-                                {{ product.description }} <br>
-                                <small class="text-muted"> Product SKU: {{ product.sku }}</small> <br>
-                                {% if product.rating %}
-                                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
-                            {% else %}
-                                <small class="text-muted">No Rating</small>
-                            {% endif %}<br>
-                                {% if product.category %}
-                                    <a href="{% url 'products' %}?category={{ product.category.name }}">
-                                        {{ product.category.friendly_name }}
-                                    </a>
-                                {% endif %}
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <p class="mb-0 text-left price">${{ product.price }}</p>
+                <a class="text-black" href="#details-section"><i class="fas fa-chevron-down"></i> Details</a>   
+                {% if product.price > 50 %}
+                <hr>
+                <p class="text-center text-lilac">This item qualifies for FREE DELIVERY!</p>
+                <hr>
+                {% endif %}
                 <!-- Quantity selctor / Size selector -->
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
@@ -80,8 +60,7 @@
                                     </select>
                                 </div>
                             {% endif %}
-                        <div class="col-12">
-                            <p class="mt-3"><strong>Quantity:</strong></p>
+                        <div class="col-12 mt-5">
                             <div class="form-group w-100">
                                 <div class="input-group">
                                     
@@ -122,6 +101,20 @@
                         {% endwith %}
                     </div>
                 </form>
+                <div class="col-12 mt-5 d-block d-md-none">
+                    {% include 'products/includes/details.html' %}
+                </div>
+                <div class="col-12 mt-5 d-block d-md-none">
+                    {% include 'products/includes/shipping.html' %}
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-lg-4 offset-lg-2 d-none d-md-block" id="details-section">
+                {% include 'products/includes/details.html' %}
+            </div>
+            <div class="col-md-6 col-lg-4 d-none d-md-block">
+                {% include 'products/includes/shipping.html' %}
             </div>
         </div>
     </div>
