--- a/products/templates/products/includes/shipping.html
+++ b/products/templates/products/includes/shipping.html
@@ -1,3 +1,3 @@
 <h4>Shipping</h4>
 <hr>
-<p class="text-small">Normal delivery time: 2-5 working days. <br> Free standard shipping for purchases over $50 & free home delivery for purchases over $100</p>
+<p class="text-small">Normal delivery time: 2-5 working days. <br> Free standard delivery for orders over $50 & free home delivery for orders over $100</p>
