Moved script to own file, added comments in .html

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -18,6 +18,7 @@
 <div class="overlay"></div>
 <div class="container-fluid mt-5 pt-5">
     <div class="row">
+        <!-- DISPLAY CURRENT CATEGORY -->
         <div class="product-header col text-center">
             {% if current_categories %}
                 {% for c in current_categories %}
@@ -32,6 +33,7 @@
     </div>
     <div class="row">
         <div class="product-container col-12">
+            <!-- DROPDOWN SORT SELECTOR -->
             <div class="row mt-1 mb-2">
                 <div class="col-12 my-auto mx-auto d-flex justify-content-center">
                     <div class="sort-select-wrapper">
@@ -57,6 +59,7 @@
                     </p>
                 </div>
             </div>
+            <!-- PRODUCTS -->
             <div class="row">
                 {% for product in products %}
                     <div class="col-6 col-sm-6 col-md-6 col-lg-4 col-xl-3">
@@ -122,26 +125,5 @@
 {% endblock %}
 {% block postloadjs %}
     {{ block.super }}
-    <script type="text/javascript">
-        $('#sort-selector').change(function() {
-            var selector = $(this);
-            var currentUrl = new URL(window.location);
-
-            var selectedVal = selector.val();
-            if(selectedVal != "reset"){
-                var sort = selectedVal.split("_")[0];
-                var direction = selectedVal.split("_")[1];
-
-                currentUrl.searchParams.set("sort", sort);
-                currentUrl.searchParams.set("direction", direction);
-
-                window.location.replace(currentUrl);
-            } else {
-                currentUrl.searchParams.delete("sort");
-                currentUrl.searchParams.delete("direction");
-
-                window.location.replace(currentUrl);
-            }
-        })
-    </script>
+    <script src="{% static 'products/js/sort_selector.js' %}"></script>
 {% endblock %}
