added order history, updated checkout views

--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -1,3 +1,8 @@
+.order-history {
+    max-height: 416px;
+    overflow-y: auto;
+}
+
 .profile-container {
     min-height: 70vh;
     margin-top: 10rem;
