--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -91,6 +91,16 @@
                                         {% endif %}
                                     </div>
                                 </div>
+                                <div class="row">
+                                    <div class="col">
+                                        {% if request.user.is_superuser %}
+                                        <small class="ml-3">
+                                            <a href="{% url 'edit_product' product.id %}">Edit</a> | 
+                                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                                        </small>
+                                        {% endif %}
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
