--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -15,7 +15,7 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container managment-container">
+<div class="container managment-header">
     <div class="row">
         <div class="col-12 col-md-6 offset-md-3">
             <h2 class="logo-font mb-4">Product Management</h2>
@@ -24,18 +24,34 @@
         </div>
     </div>
 
-    
+    <div class="row add-edit-container">
         <div class="col-12 col-md-6 offset-md-3 mt-5">
             <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ form | crispy }}
+                {% for field in form %}
+                    {% if field.name != 'image' %}
+                        {{ field | as_crispy_field }}
+                    {% else %}
+                        {{ field }}
+                    {% endif %}
+                {% endfor %}
                 <div class="text-right">
-                    <a class="btn rounded-0" href="{% url 'products' %}">Cancel</a>
-                    <button class="btn rounded-0" type="submit">Add Product</button>
+                    <a class="btn btn-md rounded-0" href="{% url 'products' %}">Cancel</a>
+                    <button class="btn btn-md rounded-0" type="submit">Add Product</button>
                 </div>
             </form>
         </div>
-   
+    </div>
 </div>
 
+{% endblock %}
+
+{% block poastloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('#new-image').change(function() {
+            var file = $('#new-image')[0].files[0];
+            $('#filename').text(`Image will be set to: ${file.name}`);
+        });
+    </script>
 {% endblock %}
