--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -27,7 +27,7 @@
 </div>
 
 <!-- SHOPNOW SECTION -->
-<div class="row container-fluid shopnow-container bg-shopnow pt-3 pb-3">
+<div class="row container-fluid shopnow-container bg-shopnow pt-3 pb-3 uppercase">
     <a href="{% url 'products' %}?category=decks" id="shopnow" class="col-6 col-sm-6 col-md-4 col-lg-2">
         <div id="shopnow-inner">
             <h1><img src="https://img.icons8.com/ios/100/ffffff/skateboard-without-wheels.png"/></h1>
