updated the navigation menu

--- a/templates/base.html
+++ b/templates/base.html
@@ -151,7 +151,7 @@
                 <h2 class="logo-font text-black">SkateStore<span class="dot">.</span></h2>
             </a>
             {% include 'includes/mobile-top-header.html' %}
-            {% include 'includes/main-nav.html' %}
+            {% include 'includes/mobile-nav.html' %}
         </nav>
     </div>
     </header>
