--- a/static/css/base.css
+++ b/static/css/base.css
@@ -47,6 +47,18 @@ footer {
     box-shadow: 0px 7px 8px -6px rgba(0,0,0,0.79);
 }
 
+#mobile-nav hr {
+    margin-bottom: 0px;
+}
+
+#mobile-nav hr:last-child {
+    margin-bottom: 16px;
+}
+
+#mobile-nav .nav-item:not(.nav-item:first-child) {
+    text-transform: uppercase;
+}
+
 a.nav-link {
     font-size: .7rem;
     font-weight: 800;
@@ -122,12 +134,13 @@ a.nav-link {
 
 .dropdown-menu {
     background-color: #fff!important;
+    box-shadow: 0px 7px 8px -6px rgba(0,0,0,0.79);
 }
 
 .navbar-brand h2 {
     font-family: 'Pacifico', sans-serif;
     color: #222!important;
-    text-decoration: underline #222;
+    border-color: #764c87;
 }
 
 a.nav-link.main-logo-link.navbar-brand {
@@ -212,7 +225,7 @@ select option[value=""] {
 
 a.nav-link:hover {
     color: #764c87!important;
-    transition: 4ms ease-in-out;
+    transition: .4s ease-in-out;
     text-decoration: underline;
 }
 
