--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,8 @@
         <!-- DELIVERY BANNER -->
         <div id="delivery-banner" class="row text-center">
             <div class="col">
-                <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>
+              
+                <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}! <i class="fas fa-shipping-fast"></i></h4>
             </div>
         </div>
         <!-- NAVBAR -->
