--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -2,9 +2,9 @@
     <div class="arrow-up arrow-warning"></div>
     <div class="w-100 toast-capper bg-warning"></div>
     <div class="toast-header bg-white text-dark">
-        <strong class="mr-auto">Warning!</strong>
-        <button type="button" class="ml-2 mb-1 close text-white btn btn-sm rounded-4" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
+        <strong class="mr-auto uppercase">Warning!</strong>
+        <button type="button" class="ml-2 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true"><i class="fas fa-times"></i></span>
         </button>
     </div>
     <div class="toast-body bg-white">
