--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -2,6 +2,11 @@
 {% load static %}
 {% load bag_tools %}
 
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'bag/css/bag.css' %}">
+{% endblock %}
+
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -56,22 +61,23 @@
                         <td class="pb-3 align-middle qty">
                             <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
                                 {% csrf_token %}
-                                <div class="form-group">
+                                <div class="form-group w-100">
                                     <div class="input-group">
+                                        
                                         <div class="input-group-prepend">
-                                            <button class="decrement-qty btn rounded-4" 
+                                            <button class="decrement-qty btn rounded-0" 
                                                 data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
                                                 <span>
                                                     <i class="fas fa-minus fa-sm"></i>
                                                 </span>
                                             </button>
                                         </div>
-                                        <input class="form-control form-control-sm qty_input" type="number"
+                                        <input class="form-control qty_input text-center" type="number"
                                             name="quantity" value="{{ item.quantity }}" min="1" max="99"
                                             data-item_id="{{ item.item_id }}"
                                             id="id_qty_{{ item.item_id }}">
                                         <div class="input-group-append">
-                                            <button class="increment-qty btn rounded-4"
+                                            <button class="increment-qty btn rounded-0"
                                                 data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
                                                 <span>
                                                     <i class="fas fa-plus fa-sm"></i>
