--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'products/css/product_details.css' %}">
+    <link rel="stylesheet" href="{% static 'products/css/product_detail.css' %}">
 {% endblock %}
 
 {% block page_header %}
@@ -81,9 +81,9 @@
                                 <div class="input-group">
                                     
                             <!-- ADD TO BAG BUTTON -->
-                            <input type="submit" class="add-button btn btn-sm rounded-0 rounded-left text-uppercase py-2" value="Add to Bag">
+                            <input type="submit" class="add-button btn btn-sm rounded-0 text-uppercase py-2" value="Add to Bag">
                                     <div class="input-group-prepend">
-                                        <button class="decrement-qty btn  rounded-0" 
+                                        <button class="decrement-qty btn rounded-0" 
                                             data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-minus"></i>
